Add | Add service for api and models

--- a/src/app/core/components/app-home/app-home.component.html
+++ b/src/app/core/components/app-home/app-home.component.html
@@ -1,1 +1,11 @@
-holaaaaaa
+<button type="button">
+  All</button>
+<button type="button">
+  My faves
+</button>
+
+
+<app-select></app-select>
+
+
+<app-posts></app-posts>
