--- a/src/app/core/components/app-select/app-select.component.css
+++ b/src/app/core/components/app-select/app-select.component.css
@@ -2,6 +2,6 @@
   width: 240px;
   height: 32px;
   border-radius: 4px;
-  border: solid 1px #2e2e2e;
+  /* border: solid 1px #2e2e2e; */
   background-color: #ffffff;
 }
