--- a/src/app/core/components/app-select/app-select.component.html
+++ b/src/app/core/components/app-select/app-select.component.html
@@ -1,8 +1,10 @@
 <div class="select">
 
-  <select name="tech" id="tech" class="Rectangle">
-    <option value="angular">Angular</option>
-    <option value="react">React</option>
-    <option value="vue">Vue</option>
+
+  <select class="select" (change)="changeSelect($event)">
+
+
+    <option *ngFor="let nameTech of nameTechs" [value]="nameTech.value">{{nameTech}}</option>
+
   </select>
 </div>
