Add | Communication between components

--- a/src/app/shared/components/app-header/app-header.component.css
+++ b/src/app/shared/components/app-header/app-header.component.css
@@ -1,5 +1,10 @@
+body {
+  margin: 0;
+}
+
 .header {
   height: 114px;
+  padding: 0;
   /* box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
   background-image: linear-gradient(to bottom, #ececec -32%, #ffffff 124%); */
 }
