--- a/src/app/shared/components/app-header/app-header.component.html
+++ b/src/app/shared/components/app-header/app-header.component.html
@@ -1,4 +1,3 @@
-<header class="header">
-  HOLA
-  <!-- <div class="header__image"></div> -->
-</header>
+<div class="logo">
+</div>
+<header class="header">HACKER NEWS</header>
