--- a/src/app/core/components/app-pagination/app-pagination.component.html
+++ b/src/app/core/components/app-pagination/app-pagination.component.html
@@ -1,1 +1,19 @@
-<p>app-pagination works!</p>
+<section class="paginacion">
+  <ul>
+    <li>
+      <a class="active">1</a>
+    </li>
+    <li>
+      <a>2</a>
+    </li>
+    <li>
+      <a>3</a>
+    </li>
+    <li>
+      <a>4</a>
+    </li>
+    <li>
+      <a>5</a>
+    </li>
+  </ul>
+</section>
