Add | Validation of data in posts element

--- a/src/app/core/components/app-posts/app-posts.component.css
+++ b/src/app/core/components/app-posts/app-posts.component.css
@@ -1,6 +1,6 @@
 .box {
   width: 550px;
-  height: 90px;
+  /* height: 90px; */
   opacity: 0.8;
   border-radius: 6px;
   border: solid 1px #979797;
