--- a/src/app/core/components/app-select/app-select.component.html
+++ b/src/app/core/components/app-select/app-select.component.html
@@ -2,7 +2,7 @@
 
 
   <select class="select" (change)="changeSelect($event)">
-
+    <option>Select your news</option>
     <option *ngFor="let nameTech of nameTechs" [value]="nameTech">{{nameTech}}</option>
 
   </select>
