--- a/src/app/shared/components/app-header/app-header.component.css
+++ b/src/app/shared/components/app-header/app-header.component.css
@@ -1,14 +1,11 @@
-body {
-  margin: 0;
+.box__img {
+  background-image: url('/../assets/img/hacker-news.svg');
+  background-repeat: no-repeat;
 }
 
-.header {
+.box__header {
   height: 114px;
   padding: 0;
-  /* box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
-  background-image: linear-gradient(to bottom, #ececec -32%, #ffffff 124%); */
+  box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
+  /* background: linear-gradient(to bottom, #ececec -32%, #ffffff 124%); */
 }
-
-/* .header__image {
-  background-image: url("./assets/img/logo.png");
-} */
