--- a/src/app/shared/components/app-header/app-header.component.html
+++ b/src/app/shared/components/app-header/app-header.component.html
@@ -1,3 +1,3 @@
-<div class="logo">
+<div class="box__img">
+  <header class="box__header"></header>
 </div>
-<header class="header">HACKER NEWS</header>
