--- a/src/app/shared/components/app-header/app-header.component.html
+++ b/src/app/shared/components/app-header/app-header.component.html
@@ -1,3 +1,7 @@
-<div class="box__img">
-  <header class="box__header"></header>
+<div class="box">
+  <header class="box__header">
+    <div class="container">
+      <img src="/../assets/img/hacker-news.svg" alt="">
+    </div>
+  </header>
 </div>
