--- a/src/app/core/components/app-home/app-home.component.css
+++ b/src/app/core/components/app-home/app-home.component.css
@@ -1,4 +1,21 @@
 .button__show {
   width: 98px;
   height: 31px;
+  border-radius: 2px;
+  border: solid 1px #1797ff;
+  outline: none;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.75;
+  letter-spacing: normal;
+  text-align: center;
+  color: #1797ff;
+}
+
+.button__show:hover {
+  border: solid 1px #d6d6d6;
+  color: #606060;
 }
