--- a/src/app/core/components/app-posts-favorites/app-posts-favorites.component.css
+++ b/src/app/core/components/app-posts-favorites/app-posts-favorites.component.css
@@ -1,30 +1,65 @@
+.box {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .box__post {
-  width: 550px;
+  display: flex;
+  flex-wrap: wrap;
+  width: calc(49% - 20px);
   opacity: 0.8;
   border-radius: 6px;
   border: solid 1px #979797;
   background-color: #ffffff;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.box__button_white {
-  background-image: url(/../assets/img/heart-white.svg);
-  background-size: cover;
-  background-position: center;
-  display: inline-block;
+.box__post:nth-child(odd) {
+  margin-right: 20px;
+}
+
+.box__post:nth-child(even) {
+  margin-left: 20px;
+}
+
+.box__inf {
+  width: calc(100% - 68px);
+}
+
+.box__create {
+  font-size: 11px;
+  font-weight: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #767676;
+}
+
+.box__title {
+  width: 27.5rem;
+  font-size: 14px;
+  font-weight: 500;
+  color: #6b6b6b;
+}
+
+.box__like {
+  width: 68px;
+  background-color: rgba(96, 96, 96, 0.06);
+}
+
+.box__button {
+  display: block;
   border: none;
-  height: 40px;
-  width: 44px;
-  padding: 20px;
+  height: 22px;
+  width: 24px;
+  padding: 0;
   outline: none;
+  background-color: transparent;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-.box__button_red {
-  background-image: url(/../assets/img/heart-red.svg);
-  background-size: cover;
-  background-position: center;
-  display: inline-block;
-  border: none;
-  height: 40px;
-  width: 44px;
-  padding: 20px;
+.box__button img {
+  width: 24px;
+  height: 22px;
 }
