--- a/src/app/core/components/app-posts-favorites/app-posts-favorites.component.html
+++ b/src/app/core/components/app-posts-favorites/app-posts-favorites.component.html
@@ -1,8 +1,15 @@
 <section class="box">
   <div class="box__post" *ngFor="let post of postList">
-    <p>{{post.created_at | date:'h'}} hours ago by {{post.author}}</p>
-    <p>titulo: {{post.story_title}}</p>
-    <p>url: {{post.story_url}}</p>
-    <button class="box__button_red" (click)="removeFavoritePost(post)"></button>
+    <div class="box__inf">
+      <p class="box__create">{{post.created_at | date:'h'}} hours ago by {{post.author}}</p>
+      <p class="box__title">{{post.story_title}}</p>
+      <!-- <p>url: {{post.story_url}}</p> -->
+    </div>
+    <div class="box__like">
+      <button class="box__button" (click)="removeFavoritePost(post)">
+        <img src="/../assets/img/heart-red.svg" alt="">
+        <!-- <img src="/../assets/img/heart-white.svg" alt=""> -->
+      </button>
+    </div>
   </div>
 </section>
