--- a/src/app/core/components/app-select/app-select.component.css
+++ b/src/app/core/components/app-select/app-select.component.css
@@ -4,4 +4,13 @@
   border-radius: 4px;
   /* border: solid 1px #2e2e2e; */
   background-color: #ffffff;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.57;
+  letter-spacing: normal;
+  color: #343434;
+  outline: none;
 }
