--- a/src/styles.css
+++ b/src/styles.css
@@ -5,4 +5,16 @@ body,
 app-root {
   margin: 0;
   padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+* {
+  font-size: 12px;
+}
+
+.container {
+  width: 100%;
+  max-width: 1140px;
+  margin-left: auto;
+  margin-right: auto;
 }
