--- a/src/app/core/components/app-select/app-select.component.css
+++ b/src/app/core/components/app-select/app-select.component.css
@@ -1,3 +1,8 @@
+.box {
+  padding-top: 3.938rem;
+  padding-bottom: 2.688rem;
+}
+
 .select {
   width: 240px;
   height: 32px;
@@ -7,10 +12,6 @@
   font-family: Roboto;
   font-size: 14px;
   font-weight: normal;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: 1.57;
-  letter-spacing: normal;
   color: #343434;
   outline: none;
 }
