--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@ app-root {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  background-color: #fcfcfc;
 }
 
 * {
@@ -17,4 +18,10 @@ app-root {
   max-width: 1140px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media (max-width: 576px) {
+  .container {
+    width: 90%;
+  }
 }
