--- a/src/app/core/components/app-posts/app-posts.component.html
+++ b/src/app/core/components/app-posts/app-posts.component.html
@@ -1,18 +1,23 @@
-<section class="box">
-  <div class="box__post" *ngFor="let post of postList">
-    <div class="box__inf">
+<div class="search-results" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll()">
+  <section class="box">
+    <div class="box__post" *ngFor="let post of postList">
+      <div class="box__inf" (click)="openUrl(post.story_url)">
 
-      <p class="box__create">
-        <img class="box__clock" src="/../assets/img/clock.svg"> {{post.created_at | date:'h'}} hours ago by {{post.author}}</p>
-      <p class="box__title">{{post.story_title}}</p>
-      <!-- <p>url: {{post.story_url}}</p> -->
-    </div>
+        <p class="box__create">
+          <img class="box__clock" src="/../assets/img/clock.svg"> {{post.created_at | date:'h'}} hours ago by {{post.author}}</p>
+        <p class="box__title">{{post.story_title}}</p>
+      </div>
 
-    <div class="box__like">
-      <button class="box__button" (click)="saveFavoritePost(post)">
-        <img src="/../assets/img/heart-white.svg" alt="">
-        <!-- <img src="/../assets/img/heart-red.svg" alt=""> -->
-      </button>
+      <div class="box__like">
+        <button class="box__button" (click)="saveFavoritePost(post)">
+          <img src="/../assets/img/heart-white.svg" alt="">
+          <img src="/../assets/img/heart-red.svg" alt="">
+        </button>
+        <button class="box__button" (click)="saveFavoritePost(post)">
+          <img src="/../assets/img/heart-white.svg" alt="">
+          <img src="/../assets/img/heart-red.svg" alt="">
+        </button>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
+</div>
