--- a/src/app/core/components/app-posts-favorites/app-posts-favorites.component.css
+++ b/src/app/core/components/app-posts-favorites/app-posts-favorites.component.css
@@ -4,6 +4,11 @@
   padding-top: 8.313rem;
 }
 
+.box div:hover {
+  color: #606060;
+  opacity: 0.5;
+}
+
 .box__post {
   display: flex;
   flex-wrap: wrap;
@@ -75,9 +80,9 @@
 }
 
 @media (max-width: 576px) {
-  .box__post {
+  .box .box__post.box__post {
     width: 100%;
-    margin-left: auto !important;
-    margin-right: auto !important;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
