--- a/src/app/core/components/app-select/app-select.component.css
+++ b/src/app/core/components/app-select/app-select.component.css
@@ -7,7 +7,7 @@
   width: 240px;
   height: 32px;
   border-radius: 4px;
-  /* border: solid 1px #2e2e2e; */
+  border: solid 1px #2e2e2e;
   background-color: #ffffff;
   font-family: Roboto;
   font-size: 14px;
